# codexctl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.in  MERGE_SUMMARY.md  Makefile  Pipfile  README.md  build.sh  codexctl.py  github-make-executable.sh  gui.py  main.py  pyproject.toml  requirements.device.txt  requirements.full.txt  requirements.remote.txt  requirements.txt  serve.py  test.py  tui.py  updates.py
.github/workflows/: main.yml  python-publish.yml
Builds/: Dockerfile.in  Makefile  requirements.remote.txt  requirements.txt
Builds/scripts/: install_build_tools.sh
Tests/: test.py
builds/: github-make-executable.sh
builds/scripts/: build.sh
codexctl/: __init__.py  __main__.py  analysis.py  codexctl.py  cpio.py  device.py  extractor.py  server.py  sync.py  updates.py
codexctl/modules/: device.py  server.py  sync.py  updates.py
data/: version-ids.json
local/: codexctl.py  server.py  updates.py
modules/: codexctl.py  extractor.py  server.py  sync.py  update_metadata_pb2.py  updates.py
remote/: downloader.py  main.py  serve.py  updates.py
scripts/: build.sh  github-make-executable.sh  install_build_tools.sh  run_build.sh
tests/: test.py  test_unit.py
