[tool.poetry]
name = "codexctl"
version = "1.2.0"
description = "Automated update managment for the ReMarkable tablet"
authors = ["Jayy001 <github@skii.dev>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "3.4.1"
psutil = "6.0.0"
requests = "2.31.0"
loguru = "0.7.2"
remarkable-update-image = { version = "1.1.5", markers = "sys_platform != 'linux'" }
remarkable-update-fuse = { version = "1.2.3", markers = "sys_platform == 'linux'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codexctl = "codexctl.__main__:main"
cxtl = "codexctl.__main__:main"
